WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104557
Web Inspector: fix front-end compilation warnings
https://bugs.webkit.org/show_bug.cgi?id=104557
Summary
Web Inspector: fix front-end compilation warnings
Pavel Feldman
Reported
2012-12-10 07:37:11 PST
There is a bunch of random warnings on tip of tree
Attachments
Patch
(11.38 KB, patch)
2012-12-10 08:04 PST
,
Pavel Feldman
apavlov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2012-12-10 08:04:40 PST
Created
attachment 178555
[details]
Patch
Pavel Feldman
Comment 2
2012-12-10 08:19:42 PST
Committed
r137160
: <
http://trac.webkit.org/changeset/137160
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug