Web Inspector: fix front-end compilation warnings https://bugs.webkit.org/show_bug.cgi?id=104557

Reviewed by Alexander Pavlov.

Corresponding annotations added.

* inspector/Inspector.json:
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::highlightNode):
* inspector/InspectorDOMAgent.h:
(InspectorDOMAgent):
* inspector/front-end/CSSStyleModel.js:
(WebInspector.CSSStyleDeclaration.prototype.):
(WebInspector.CSSStyleDeclaration.prototype.insertPropertyAt):
* inspector/front-end/ConsoleMessage.js:
(WebInspector.ConsoleMessageImpl.prototype._appendPropertyPreview):
* inspector/front-end/DOMAgent.js:
(WebInspector.DOMAgent.prototype.highlightDOMNode):
* inspector/front-end/DOMPresentationUtils.js:
(WebInspector.DOMPresentationUtils.linkifyNodeReference):
* inspector/front-end/ObjectPropertiesSection.js:
(WebInspector.ObjectPropertyTreeElement.prototype.update):
* inspector/front-end/Toolbar.js:

Canonical link: https://commits.webkit.org/122719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137160 268f45cc-cd09-0410-ab3c-d52691b4dbfc